[package]
name = "zero2prod"
version = "0.1.0"
authors = ["404b0tnet <jsmith728.js@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Latest beta release of actix-web
#That relies on tokio 1.x.x
#There is _some_ turbulence when working with betas,
# we are pinning a few other supporting packages to ensure
# compatibility
actix-web = "=4.0.0-beta.8"
actix-http = "=3.0.0-beta.8"